# Hotel-Booking-Backend

./: .env  Cargo.toml  compose.yml
.sqlx/: query-94a2246d82ec39f1aaf4ae8f985067b6dcc8d38be7f33e06c109edda61903be6.json  query-a9eafe4b3632e89aed8bbbbc42737ca08691700b13e4039a3a5efdffe54afede.json  query-e5fa657e8fdb25e862b69855ff2c8361ef6fa2ad7bcbd781836d89a4caff169b.json
migrations/: 0001_schema.sql  20260221051707_init.sql
src/: main.rs
src/db/: connection.rs
src/handlers/: auth_handler.rs  booking_handler.rs  mod.rs
src/middleware/: auth_middleware.rs
src/models/: hotel.rs  mod.rs  user.rs
src/utils/: api_response.rs  mod.rs  password.rs  token_managment.rs
