[package]
name = "hotel-booking"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.101"
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres","tls-rustls-ring-native-roots"] }
sqlx-cli = "0.8.6"
tokio = { version = "1.49.0", features =["full"]}
validator = { version = "0.16", features = ["derive"] }
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = "0.6"
jwt = "0.16.0"
jsonwebtoken = "10.3.0"
